--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,7 @@
 Flask==3.0.0
 Flask-CORS==4.0.0
 SQLAlchemy==2.0.23
-beautifulsoup4==4.12.2
-requests==2.31.0
 python-dotenv==1.0.0
-email-validator==2.1.0
-lxml==5.1.0
+requests==2.31.0
+psycopg2-binary==2.9.9
+gunicorn==21.2.0
