--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,11 @@
 [phases.setup]
-nixPkgs = ["python311", "postgresql"]
+nixPkgs = ["python311"]
 
 [phases.install]
 cmds = ["cd backend && pip install -r requirements.txt"]
+
+[phases.build]
+cmds = ["cd backend && python -c 'from database.connection import Base, engine; Base.metadata.create_all(engine)'"]
 
 [start]
 cmd = "cd backend && gunicorn app:app --bind 0.0.0.0:$PORT"
