--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,3 +5,8 @@ python-dotenv==1.0.0
 requests==2.31.0
 psycopg2-binary==2.9.9
 gunicorn==21.2.0
+beautifulsoup4==4.12.2
+lxml==5.3.0
+google-api-python-client==2.149.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
