Fix Vercel serving - set output to frontend root

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,6 +1,12 @@
 {
   "buildCommand": null,
-  "outputDirectory": "public",
+  "outputDirectory": ".",
   "installCommand": null,
-  "framework": null
+  "framework": null,
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/public/index.html"
+    }
+  ]
 }
