--- a/backend/Procfile
+++ b/backend/Procfile
@@ -1,1 +1,1 @@
-web: python init_db.py && gunicorn app:app --bind 0.0.0.0:$PORT
+web: python init_db.py && gunicorn app:app --bind 0.0.0.0:$PORT --timeout 300
